# zsh-module

./: Cargo.toml  README.md  ]  release.toml
.github/workflows/: ci.yml
src/: eval.rs  export_module.rs  features.rs  flags.rs  hashtable.rs  lib.rs  lifecycle.rs  log.rs  options.rs  param.rs  terminal.rs  zalloc.rs  zsh.rs
src/env/: accessors.rs  error.rs  helpers.rs  implementations.rs  mod.rs
src/features/: builtin.rs  condition.rs  context.rs  math.rs  mod.rs  param.rs  registry.rs  store.rs  traits.rs  trampolines.rs
src/module/: container.rs  data.rs  entrypoints.rs  export.rs  hooks_macro.rs  mod.rs  panic.rs
src/private/: error.rs  features.rs  mod.rs
src/private/api/: functions.rs  globals.rs  mod.rs
src/private/module/: container.rs  interface.rs  mod.rs  name.rs  panic.rs
src/types/: error.rs  mod.rs  ptr_iter.rs  result.rs  string_array.rs
src/zsh/: param.rs
tests/: main.rs
tests/common/: mod.rs
tests/e2e/: mod.rs
tests/e2e/env/: array.rs  hashmap.rs  integer.rs  mod.rs  string.rs
tests/e2e/fixtures/: mod.rs
tests/e2e/fixtures/module/: Cargo.toml
tests/e2e/fixtures/module/src/: lib.rs
tests/env/: array.rs  float.rs  hashmap.rs  integer.rs  mod.rs  string.rs
tests/fixtures/: mod.rs
tests/fixtures/test-fixture/: Cargo.toml
