[package]
name = "zsh-module"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "A High-level framework for creating zsh modules"
readme = "../README.md"

[features]
export_module = []
default = ["export_module"]

[dependencies]
bitflags = "1.3.2"
zsh-ffi = { git = "https://github.com/zsh-rs/zsh-ffi.git", version = "0.1.1" }
