[package]
name = "zsh-module"
version = "0.4.0"
authors = ["Cole McAnelly <cole.mcanelly3@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zsh-rs/zsh-module"
edition = "2024"
description = """
A High-level framework for creating dynamically-loadable zsh modules
"""
exclude = ["tests/fixtures"]

[features]
export_module = []
default = ["export_module"]

[dependencies]
zsh-sys = { git = "https://github.com/zsh-rs/zsh-sys.git", version = "0.2" }
zsh-module-macros = { git = "https://github.com/zsh-rs/zsh-module-macros.git", version = "0.1" }
linkme = "0.3.36"
